--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Битката е прекратена заради системна грешка" />
     <item ID="5" Name="Техническа загуба" />
     <item ID="6" Name="Точки за победа" />
+    <item ID="7" Name="Целта не е изпълнена" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
