--- a/data/lang/cs.xml
+++ b/data/lang/cs.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Bitva skončila kvůli selhání systému" />
     <item ID="5" Name="Technická porážka" />
     <item ID="6" Name="Vítězné body" />
+    <item ID="7" Name="Cíl nebyl splněn" />
     <item ID="unknown" Name="Neznámo" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
