--- a/data/lang/da.xml
+++ b/data/lang/da.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Kampen sluttede på grund af systemfejl" />
     <item ID="5" Name="Teknisk nederlag" />
     <item ID="6" Name="Sejrspoint" />
+    <item ID="7" Name="Målsætning ikke opfyldt" />
     <item ID="unknown" Name="Ukendt" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
