--- a/data/lang/de.xml
+++ b/data/lang/de.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Gefecht durch Systemfehler beendet" />
     <item ID="5" Name="Technische Niederlage" />
     <item ID="6" Name="Siegpunkte" />
+    <item ID="7" Name="Ziel nicht erfüllt" />
     <item ID="unknown" Name="Unbekannt" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
