--- a/data/lang/el.xml
+++ b/data/lang/el.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Η μάχη τελείωσε λόγω αποτυχίας του συστήματος" />
     <item ID="5" Name="Τεχνική Ήττα" />
     <item ID="6" Name="Πόντοι Νίκης" />
+    <item ID="7" Name="Ο στόχος δεν επετεύχθη" />
     <item ID="unknown" Name="Άγνωστο" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
