--- a/data/lang/en.xml
+++ b/data/lang/en.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Battle ended due to system failure" />
     <item ID="5" Name="Technical Defeat" />
     <item ID="6" Name="Victory Points" />
+    <item ID="7" Name="Objective not fulfilled" />
     <item ID="unknown" Name="Unknown" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
