--- a/data/lang/es.xml
+++ b/data/lang/es.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="La batalla acabó debido a un fallo del sistema" />
     <item ID="5" Name="Derrota Técnica" />
     <item ID="6" Name="Puntos de victoria" />
+    <item ID="7" Name="Objetivo no cumplido" />
     <item ID="unknown" Name="Desconocido" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
