--- a/data/lang/et.xml
+++ b/data/lang/et.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Lahing lõppes süsteemivea tõttu" />
     <item ID="5" Name="Tehniline kaotus" />
     <item ID="6" Name="Võidupunktid" />
+    <item ID="7" Name="Ülesannet ei täidetud" />
     <item ID="unknown" Name="Tundmatu" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
