--- a/data/lang/fi.xml
+++ b/data/lang/fi.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Taistelu loppui järjestelmävian takia" />
     <item ID="5" Name="Tekninen tappio" />
     <item ID="6" Name="Voittopisteet" />
+    <item ID="7" Name="Tavoitetta ei täytetty" />
     <item ID="unknown" Name="Tuntematon" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
