--- a/data/lang/fr.xml
+++ b/data/lang/fr.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="La bataille a pris fin suite à une erreur du système" />
     <item ID="5" Name="Défaite technique" />
     <item ID="6" Name="Points de victoire" />
+    <item ID="7" Name="Objectif non atteint" />
     <item ID="unknown" Name="Inconnu" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
