--- a/data/lang/hr.xml
+++ b/data/lang/hr.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Bitka je završila zbog kvara u sustavu" />
     <item ID="5" Name="Tehnički poraz" />
     <item ID="6" Name="Bodovi pobjede" />
+    <item ID="7" Name="Cilj nije ostvaren" />
     <item ID="unknown" Name="Nepoznati" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
