--- a/data/lang/hu.xml
+++ b/data/lang/hu.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Csata befejezve rendszerhiba miatt" />
     <item ID="5" Name="Technikai vereség" />
     <item ID="6" Name="Győzelmi pontok" />
+    <item ID="7" Name="A küldetés nem teljesült" />
     <item ID="unknown" Name="Ismeretlen" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
