--- a/data/lang/it.xml
+++ b/data/lang/it.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Battaglia terminata per un errore di sistema" />
     <item ID="5" Name="Sconfitta a tavolino" />
     <item ID="6" Name="Punti Vittoria" />
+    <item ID="7" Name="Obiettivo non soddisfatto" />
     <item ID="unknown" Name="Sconosciuto" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
