--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Kova baigėsi dėl sistemos klaidos" />
     <item ID="5" Name="Techninis pralaimėjimas" />
     <item ID="6" Name="Pergalės taškai" />
+    <item ID="7" Name="Tikslas nepasiektas" />
     <item ID="unknown" Name="Nežinoma" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
