--- a/data/lang/lv.xml
+++ b/data/lang/lv.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Kauja pārtraukta sistēmas kļūdas dēļ" />
     <item ID="5" Name="Tehniskais zaudējums" />
     <item ID="6" Name="Uzvaras punkti" />
+    <item ID="7" Name="Uzdevumi netika izpildīti" />
     <item ID="unknown" Name="Nezināms" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
