--- a/data/lang/nl.xml
+++ b/data/lang/nl.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Gevecht gestopt door systeemfout" />
     <item ID="5" Name="Technisch verlies" />
     <item ID="6" Name="Overwinningspunten" />
+    <item ID="7" Name="Doel niet vervuld" />
     <item ID="unknown" Name="Onbekend" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
