--- a/data/lang/pl.xml
+++ b/data/lang/pl.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Bitwa została zakończona z powodu awarii systemu" />
     <item ID="5" Name="Porażki techniczne" />
     <item ID="6" Name="Punkty zwycięstwa" />
+    <item ID="7" Name="Cel nie został osiągnięty" />
     <item ID="unknown" Name="Nieznany" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
