--- a/data/lang/pt.xml
+++ b/data/lang/pt.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="A batalha terminou devido a um erro de sistema" />
     <item ID="5" Name="Derrota técnica" />
     <item ID="6" Name="Pontos de Vitória" />
+    <item ID="7" Name="O objectivo não foi alcançado" />
     <item ID="unknown" Name="Desconhecido" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
