--- a/data/lang/ro.xml
+++ b/data/lang/ro.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Lupta s-a terminat din cauza unei erori de sistem." />
     <item ID="5" Name="Înfrângere tehnică" />
     <item ID="6" Name="Puncte victorie" />
+    <item ID="7" Name="Obiectul nu a fost realizat" />
     <item ID="unknown" Name="Necunoscut" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
