--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Бой прекращён по причине сбоя" />
     <item ID="5" Name="Техническое поражение" />
     <item ID="6" Name="Очки победы" />
+    <item ID="7" Name="Цели не были достигнуты" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
