--- a/data/lang/sr.xml
+++ b/data/lang/sr.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Bitka je prekinuta zbog sistemske greške" />
     <item ID="5" Name="Tehnički poraz" />
     <item ID="6" Name="Poeni pobede" />
+    <item ID="7" Name="Zadatak nije ispunjen" />
     <item ID="unknown" Name="Nepoznato" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
