--- a/data/lang/sv.xml
+++ b/data/lang/sv.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Striden avslutat på grund av systemfel" />
     <item ID="5" Name="Teknisk förlust" />
     <item ID="6" Name="Vinstpoäng" />
+    <item ID="7" Name="Målet ej uppnått" />
     <item ID="unknown" Name="Okänd" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
