--- a/data/lang/tr.xml
+++ b/data/lang/tr.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="Savaş sistem hatası sebebiyle bitti" />
     <item ID="5" Name="Teknik Yenilgi" />
     <item ID="6" Name="Zafer Puanı" />
+    <item ID="7" Name="Hedef tamamlanmadı" />
     <item ID="unknown" Name="Bilinmeyen" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
