--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -788,6 +788,7 @@
     <item ID="4" Name="因系统错误导致战斗结束" />
     <item ID="5" Name="失败" />
     <item ID="6" Name="胜利点数" />
+    <item ID="7" Name="未满足目标" />
     <item ID="unknown" Name="未知" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
