--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -220,6 +220,7 @@
     <tank ID="G119_Panzer58" sName="Pz. 58" lName="Panzer 58" />
     <tank ID="G119_Pz58_Mutz" sName="Pz. 58 Mutz" lName="Panzer 58 Mutz" />
     <tank ID="G120_M41_90" sName="M 41 90 mm" lName="leKpz M 41 90 mm" />
+    <tank ID="G120_M41_90_GrandFinal" sName="M 41 90 GF" lName="leKpz M 41 90 mm" />
     <tank ID="G121_Grille_15_L63" sName="Grille 15" lName="Grille 15" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
@@ -500,6 +501,7 @@
     <tank ID="PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
     <tank ID="PzVIB_Tiger_II_IGR" sName="Tiger II" lName="Tiger II" />
     <tank ID="PzVIB_Tiger_II_training" sName="Tiger II" lName="Tiger II" />
+    <tank ID="R00_Sfera" sName="ИС-360" lName="ИС-360" />
     <tank ID="R00_T_50_2" />
     <tank ID="R01_IS" sName="ИС" lName="ИС" />
     <tank ID="R02_SU-85" sName="СУ-85" lName="СУ-85" />
@@ -714,6 +716,7 @@
     <item ID="111_paris" Name="Монте-Роза" />
     <item ID="112_eiffel_tower" Name="Париж" />
     <item ID="114_czech" Name="Промзона" />
+    <item ID="119_moon_pool" Name="Лунопарк" />
     <item ID="11_murovanka" Name="Мурованка" />
     <item ID="13_erlenberg" Name="Эрленберг" />
     <item ID="14_siegfried_line" Name="Линия Зигфрида" />
