Updated for Euro 2016 football mode

--- a/data/lang/et.xml
+++ b/data/lang/et.xml
@@ -581,6 +581,7 @@
     <tank ID="R86_LTP" sName="LTP" lName="LTP" />
     <tank ID="R87_T62A" sName="T-62A" lName="T-62A" />
     <tank ID="R87_T62A_fallout" sName="(R) T-62A" lName="(R) T-62A" />
+    <tank ID="R87_T62A_sport" sName="T-62А S" lName="T-62A SPORT" />
     <tank ID="R90_IS_4M" sName="IS-4" lName="IS-4" />
     <tank ID="R96_Object_430" sName="Obj. 430" lName="Object 430" />
     <tank ID="Ram-II" sName="Ram II" lName="Ram II" />
@@ -682,7 +683,7 @@
     <tank ID="T57_58_fallout" sName="T57 Heavy (D)" lName="T57 Heavy Tank (D)" />
     <tank ID="T-60" sName="T-60" lName="T-60" />
     <tank ID="T62A" sName="T-62A" lName="T-62A" />
-    <tank ID="T62A_sport" sName="T-62A S." lName="T-62A SPORT" />
+    <tank ID="T62A_sport" sName="T-62А S" lName="T-62A SPORT" />
     <tank ID="T67" sName="T67" lName="T67" />
     <tank ID="T67_IGR" sName="T67" lName="T67" />
     <tank ID="T69" sName="T69" lName="T69" />
@@ -744,6 +745,9 @@
     <item ID="111_paris" Name="Jäätunud" />
     <item ID="112_eiffel_tower" Name="Purustatud pealinn" />
     <item ID="114_czech" Name="Pilsen" />
+    <item ID="116_himmelball" Name="Himmelsdorfi areen" />
+    <item ID="117_eiffelball" Name="Stad Eiffel" />
+    <item ID="118_lostcityball" Name="Old Tankford" />
     <item ID="11_murovanka" Name="Murovanka" />
     <item ID="13_erlenberg" Name="Erlenberg" />
     <item ID="14_siegfried_line" Name="Siegfriedi Liin" />
@@ -775,6 +779,8 @@
     <item ID="96_prohorovka_defense" Name="Tulest kaar" />
     <item ID="h10_summer_holiday_2016" />
     <item ID="h13_bovtankfest_2016" />
+    <item ID="h14_fevent_2016" />
+    <item ID="servercollision" />
     <item ID="03_campania" Name="Provints" />
     <item ID="15_komarin" Name="Komarin" />
     <item ID="39_crimea" Name="Lõunarannik" />
