--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -581,6 +581,7 @@
     <tank ID="R86_LTP" sName="ЛТП" lName="ЛТП" />
     <tank ID="R87_T62A" sName="Т-62А" lName="Т-62А" />
     <tank ID="R87_T62A_fallout" sName="(R) T-62A" lName="(R) T-62A" />
+    <tank ID="R87_T62A_sport" sName="Т-62А С." lName="Т-62А СПОРТ" />
     <tank ID="R90_IS_4M" sName="ИС-4" lName="ИС-4" />
     <tank ID="R96_Object_430" sName="Об. 430" lName="Обект 430" />
     <tank ID="Ram-II" sName="Ram II" lName="Ram II" />
@@ -744,6 +745,9 @@
     <item ID="111_paris" Name="Скован от ледове" />
     <item ID="112_eiffel_tower" Name="Опустошена столица" />
     <item ID="114_czech" Name="Пилзен" />
+    <item ID="116_himmelball" Name="Стадион \&quot;Химелсдорф\&quot;" />
+    <item ID="117_eiffelball" Name="Стадион \&quot;Айфел\&quot;" />
+    <item ID="118_lostcityball" Name="Забравеният стадион" />
     <item ID="11_murovanka" Name="Мурованка" />
     <item ID="13_erlenberg" Name="Ерленберг" />
     <item ID="14_siegfried_line" Name="Линията Зигфрид" />
@@ -775,6 +779,8 @@
     <item ID="96_prohorovka_defense" Name="Огнена дъга" />
     <item ID="h10_summer_holiday_2016" />
     <item ID="h13_bovtankfest_2016" />
+    <item ID="h14_fevent_2016" />
+    <item ID="servercollision" />
     <item ID="03_campania" Name="Провинция" />
     <item ID="15_komarin" Name="Комарин" />
     <item ID="39_crimea" Name="Южен бряг" />
