--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -581,6 +581,7 @@
     <tank ID="R86_LTP" sName="ЛТП" lName="ЛТП" />
     <tank ID="R87_T62A" sName="Т-62А" lName="Т-62А" />
     <tank ID="R87_T62A_fallout" sName="(А) Т-62А" lName="(А) Т-62А" />
+    <tank ID="R87_T62A_sport" sName="Т-62А С." lName="Т-62А СПОРТ" />
     <tank ID="R90_IS_4M" sName="ИС-4" lName="ИС-4" />
     <tank ID="R96_Object_430" sName="Об. 430" lName="Объект 430" />
     <tank ID="Ram-II" sName="Ram II" lName="Ram II" />
@@ -682,7 +683,7 @@
     <tank ID="T57_58_fallout" sName="T57 Heavy (П)" lName="T57 Heavy Tank (П)" />
     <tank ID="T-60" sName="Т-60" lName="Т-60" />
     <tank ID="T62A" sName="Т-62А" lName="Т-62А" />
-    <tank ID="T62A_sport" />
+    <tank ID="T62A_sport" sName="Т-62А С." lName="Т-62А СПОРТ" />
     <tank ID="T67" sName="T67" lName="T67" />
     <tank ID="T67_IGR" sName="T67" lName="T67" />
     <tank ID="T69" sName="T69" lName="T69" />
@@ -744,6 +745,9 @@
     <item ID="111_paris" Name="Монте-Роза" />
     <item ID="112_eiffel_tower" Name="Париж" />
     <item ID="114_czech" Name="Промзона" />
+    <item ID="116_himmelball" Name="Химмельштадион" />
+    <item ID="117_eiffelball" Name="Стад Эйфель" />
+    <item ID="118_lostcityball" Name="Заброшенный стадион" />
     <item ID="11_murovanka" Name="Мурованка" />
     <item ID="13_erlenberg" Name="Эрленберг" />
     <item ID="14_siegfried_line" Name="Линия Зигфрида" />
@@ -775,6 +779,8 @@
     <item ID="96_prohorovka_defense" Name="Огненная дуга" />
     <item ID="h10_summer_holiday_2016" />
     <item ID="h13_bovtankfest_2016" />
+    <item ID="h14_fevent_2016" />
+    <item ID="servercollision" />
     <item ID="03_campania" Name="Провинция" />
     <item ID="15_komarin" Name="Комарин" />
     <item ID="39_crimea" Name="Южный берег" />
