--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -581,6 +581,7 @@
     <tank ID="R86_LTP" sName="LTP" lName="LTP" />
     <tank ID="R87_T62A" sName="T-62A" lName="T-62A" />
     <tank ID="R87_T62A_fallout" sName="(R)T-62A" lName="(R)T-62A" />
+    <tank ID="R87_T62A_sport" />
     <tank ID="R90_IS_4M" sName="IS-4" lName="IS-4" />
     <tank ID="R96_Object_430" sName="430工程" lName="430工程" />
     <tank ID="Ram-II" sName="\" lName="\" />
@@ -744,6 +745,9 @@
     <item ID="111_paris" Name="冰封" />
     <item ID="112_eiffel_tower" Name="废都" />
     <item ID="114_czech" Name="布拉格" />
+    <item ID="116_himmelball" />
+    <item ID="117_eiffelball" />
+    <item ID="118_lostcityball" />
     <item ID="11_murovanka" Name="穆勒万卡" />
     <item ID="13_erlenberg" Name="埃勒斯堡" />
     <item ID="14_siegfried_line" Name="齐格菲防线" />
@@ -775,6 +779,8 @@
     <item ID="96_prohorovka_defense" Name="烈焰丘陵" />
     <item ID="h10_summer_holiday_2016" />
     <item ID="h13_bovtankfest_2016" />
+    <item ID="h14_fevent_2016" />
+    <item ID="servercollision" />
     <item ID="03_campania" Name="坎帕尼亚" />
     <item ID="15_komarin" Name="科马林" />
     <item ID="39_crimea" Name="雅尔塔小镇" />
