--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -61,7 +61,7 @@
     <tank ID="A36_Sherman_Jumbo" sName="“小飞象”" lName="“小飞象”" />
     <tank ID="A36_Sherman_Jumbo_IGR" sName="“小飞象”" lName="“小飞象”" />
     <tank ID="A37_M40M43" sName="M40/M43" lName="M40/M43" />
-    <tank ID="A38_T92" sName="T92" lName="T92" />
+    <tank ID="A38_T92" sName="T92 lt" lName="T92 lt" />
     <tank ID="A39_T28" sName="T28" lName="T28" />
     <tank ID="A40_T95" sName="T95" lName="T95" />
     <tank ID="A41_M18_Hellcat" sName="M18 \" lName="M18 \" />
@@ -103,6 +103,7 @@
     <tank ID="A94_T37" sName="T37" lName="T37" />
     <tank ID="A95_T95_E6" sName="T95E6" lName="T95E6" />
     <tank ID="A97_M41_Bulldog" sName="M41斗牛犬" lName="M41斗牛犬" />
+    <tank ID="A99_T92_LT" sName="T92 lt" lName="T92 lt" />
     <tank ID="AMX_105AM" sName="AMX 105AM" lName="AMX 105AM" />
     <tank ID="AMX_12t" sName="AMX 12t" lName="AMX 12t" />
     <tank ID="AMX_13_75" sName="AMX 13 75" lName="AMX 13 75" />
@@ -263,7 +264,9 @@
     <tank ID="F72_AMX_30" sName="AMX 30B" lName="AMX 30B" />
     <tank ID="F73_M4A1_Revalorise" sName="M4A1升级型" lName="M4A1升级型" />
     <tank ID="F74_AMX_M4_1949" sName="AMX M449" lName="AMX M449" />
+    <tank ID="F74_AMX_M4_1949_Liberte" sName="AMX M449L" lName="AMX M449L" />
     <tank ID="F75_Char_de_25t" sName="查狄伦 25a" lName="查狄伦 25a" />
+    <tank ID="F84_Somua_SM" sName="索玛 SM" lName="索玛 SM" />
     <tank ID="FCM_36Pak40" sName="FCM36 Pak40" lName="FCM 36 Pak40" />
     <tank ID="FCM_50t" sName="FCM 50t" lName="FCM 50t" />
     <tank ID="Ferdinand" sName="\" lName="\" />
@@ -289,6 +292,7 @@
     <tank ID="G10_PzIII_AusfJ_training" sName="III号坦克" lName="III号坦克" />
     <tank ID="G100_Gtraktor_Krupp" sName="克虏伯试验车" lName="克虏伯试验车" />
     <tank ID="G101_StuG_III" sName="III号突击炮B型" lName="III号突击炮B型" />
+    <tank ID="G102_Pz_III" sName="III号坦克E型" lName="III号坦克E型" />
     <tank ID="G103_RU_251" sName="Ru251" lName="Ru251" />
     <tank ID="G104_Stug_IV" sName="IV号突击炮" lName="IV号突击炮" />
     <tank ID="G105_T-55_NVA_DDR" sName="T-55A" lName="T-55A" />
@@ -299,7 +303,7 @@
     <tank ID="G11_Bison_I" sName="\" lName="\" />
     <tank ID="G112_KanonenJagdPanzer" sName="JPZ4-5" lName="JPZ4-5" />
     <tank ID="G113_SP_I_C" sName="SPIC" lName="SPIC" />
-    <tank ID="G114_Rheinmetall_Skorpian" sName="Skorpion G" lName="天蝎" />
+    <tank ID="G114_Rheinmetall_Skorpian" sName="天蝎 G" lName="天蝎 G" />
     <tank ID="G114_Skorpian" sName="天蝎" lName="天蝎" />
     <tank ID="G115_Typ_205_4_Jun" sName="VK 10001(P)" lName="VK 10001(P)" />
     <tank ID="G116_Turan_III_prot" sName="突朗III型" lName="突朗III型" />
@@ -477,6 +481,8 @@
     <tank ID="GB86_Centurion_Action_X" sName="百夫长 AX" lName="百夫长 AX" />
     <tank ID="GB87_Chieftain_T95_turret" sName="酋长 T95" lName="酋长 T95" />
     <tank ID="GB88_T95_Chieftain_turret" sName="T95 酋长" lName="T95 酋长" />
+    <tank ID="GB89_Mark_I_Male" sName="马克 I" lName="马克 I" />
+    <tank ID="GB90_Lanchester_Armored_Car" sName="兰彻斯特" lName="兰彻斯特" />
     <tank ID="Grille" sName="\" lName="\" />
     <tank ID="GW_Mk_VIe" sName="G.Pz.Mk.VI" lName="G.Pz.Mk.VI" />
     <tank ID="GW_Tiger_P" sName="Gw 虎(P)" lName="Gw 虎(P)" />
@@ -725,8 +731,9 @@
     <tank ID="R32_Matilda_II_LL" sName="\" lName="\" />
     <tank ID="R33_Churchill_LL" sName="\" lName="\" />
     <tank ID="R34_BT-SV" sName="BT-SV" lName="BT-SV" />
-    <tank ID="R38_KV-220" sName="KV-220-2试验型" lName="KV-220-2 试验型" />
+    <tank ID="R38_KV-220" sName="KV-220-2" lName="KV-220-2" />
     <tank ID="R38_KV-220_action" sName="KV-220-2" lName="KV-220-2" />
+    <tank ID="R38_KV-220_beta" sName="KV-220-2试验型" lName="KV-220-2 试验型" />
     <tank ID="R39_KV-3" sName="KV-3" lName="KV-3" />
     <tank ID="R40_T-54" sName="T-54" lName="T-54" />
     <tank ID="R41_T-50" sName="T-50" lName="T-50" />
@@ -792,7 +799,8 @@
     <tank ID="RhB_Waffentrager" sName="Rhm·B WT" lName="Rhm·B WT" />
     <tank ID="S_35CA" sName="S-35 CA" lName="S-35 CA" />
     <tank ID="S_35CA_IGR" sName="S-35 CA" lName="S-35 CA" />
-    <tank ID="S01_Strv_74_A2" />
+    <tank ID="S01_Strv_74_A2" sName="SMA-2" lName="SMA-2" />
+    <tank ID="S15_L_60" sName="L-60" lName="L-60" />
     <tank ID="S35_captured" sName="S35 739(f)" lName="S35 739(f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
@@ -894,7 +902,7 @@
     <tank ID="T71_IGR" sName="T71" lName="T71" />
     <tank ID="T80" sName="T-80" lName="T-80" />
     <tank ID="T82" sName="T82" lName="T82" />
-    <tank ID="T92" sName="T92" lName="T92" />
+    <tank ID="T92" sName="T92 lt" lName="T92 lt" />
     <tank ID="T95" sName="T95" lName="T95" />
     <tank ID="T95_E2" sName="T95E2" lName="T95E2" />
     <tank ID="T95_E6" sName="T95E6" lName="T95E6" />
@@ -940,10 +948,8 @@
     <item ID="100_thepit" Name="密特朗" />
     <item ID="101_dday" Name="诺曼底" />
     <item ID="103_ruinberg_winter" Name="鲁别克(冬季)" />
-    <item ID="105_germany" Name="柏林" />
     <item ID="10_hills" Name="湖边的角逐" />
-    <item ID="111_paris" Name="冰封" />
-    <item ID="112_eiffel_tower" Name="帕里斯" />
+    <item ID="112_eiffel_tower_ctf" Name="巴黎" />
     <item ID="114_czech" Name="布拉格" />
     <item ID="11_murovanka" Name="穆勒万卡" />
     <item ID="13_erlenberg" Name="埃勒斯堡" />
@@ -974,12 +980,8 @@
     <item ID="92_stalingrad" Name="斯大林格勒" />
     <item ID="95_lost_city" Name="失落小镇" />
     <item ID="96_prohorovka_defense" Name="烈焰丘陵" />
-    <item ID="h02_tmday_2015" />
-    <item ID="h10_summer_holiday_2016" />
-    <item ID="h15_gamescom_2016" />
-    <item ID="h16_wg_bday_2016" />
-    <item ID="h17_thgday_kr_2016" />
-    <item ID="h19_victory_day_cn" />
+    <item ID="h04_remday_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="03_campania" Name="坎帕尼亚" />
     <item ID="15_komarin" Name="科马林" />
     <item ID="39_crimea" Name="雅尔塔小镇" />
@@ -991,23 +993,32 @@
     <item ID="87_ruinberg_on_fire" Name="鲁别克（烈焰）" />
     <item ID="99_himmelball" />
     <item ID="102_deathtrack" />
+    <item ID="111_paris" Name="巴黎" />
     <item ID="h01_bday_2015" />
+    <item ID="h02_tmday_2015" />
+    <item ID="105_germany" Name="柏林" />
+    <item ID="112_eiffel_tower" Name="废都" />
     <item ID="h03_shopfest_2015" />
-    <item ID="h04_remday_2015" />
     <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="94_battlecity" />
     <item ID="h07_newyear_2015" />
     <item ID="h09_bday_cn_2016" />
     <item ID="h11_wgl_grandfinal_2016" />
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
+    <item ID="h10_summer_holiday_2016" />
     <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="锡城球场" />
     <item ID="117_eiffelball" Name="艾菲尔球场" />
     <item ID="118_lostcityball" Name="失落小镇球场" />
     <item ID="h14_fevent_2016" />
     <item ID="servercollision" />
+    <item ID="h15_gamescom_2016" />
+    <item ID="h16_wg_bday_2016" />
+    <item ID="h17_thgday_kr_2016" />
+    <item ID="h19_victory_day_cn" />
+    <item ID="122_somme" Name="索姆河" />
+    <item ID="h18_bdtanks100_2016" />
     <item ID="unknown" Name="未知" />
   </Lang_Maps>
   <Lang_Nations>
@@ -1019,6 +1030,7 @@
     <item ID="ussr" Name="S系" />
     <item ID="japan" Name="R系" />
     <item ID="czech" Name="J系" />
+    <item ID="sweden" Name="V系" />
     <item ID="unknown" Name="未知" />
   </Lang_Nations>
   <Lang_Results>
@@ -1072,6 +1084,7 @@
     <item ID="5" Name="失败" />
     <item ID="6" Name="胜利点数" />
     <item ID="7" Name="未满足目标" />
+    <item ID="8" Name="马克 I被击毁了" />
     <item ID="unknown" Name="未知" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
@@ -1101,7 +1114,7 @@
     <item ID="2" Name="因撞击被撞毁" />
     <item ID="3" Name="坠毁" />
     <item ID="4" Name="因进入死区域毁坏" />
-    <item ID="5" Name="坦克已溺亡" />
+    <item ID="5" Name="坦克溺水" />
     <item ID="7" Name="故意自损坦克" />
     <item ID="unknown" Name="未知" />
   </Lang_DeathReasons>
@@ -1597,7 +1610,7 @@
       </Secondary>
     </PM>
     <PM name="MT-4:你给我站住" short="IV号突击炮: MT-4" desc="击毁敌方的履带，然后狠狠的打击他们。" tMID="34" opID="1" mID="4" setID="3" ID="quest_1_3_4_main" secID="quest_1_3_4_add" minLvl="4" maxLvl="10" campID="1" camp="迟来的支援" reward="IV号突击炮">
-      <Hint>敌人的坦克履带被击毁后，会暂时无法移动。这样你能更好的瞄准他们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
+      <Hint>敌方坦克的履带被击毁后，将暂时无法移动。这样你能更好的瞄准它们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
       <Primary fXP="0" cr="50000" slots="0" tokens="0" done="false">
         <req>• 击毁1辆敌方坦克的履带并在履带修复前对其造成1次伤害。</req>
       </Primary>
@@ -2272,7 +2285,7 @@
       </Secondary>
     </PM>
     <PM name="MT-4:你给我站住" short="T28(概念车): MT-4" desc="击毁敌方的履带，然后狠狠的打击他们。" tMID="109" opID="2" mID="4" setID="3" ID="quest_2_3_4_main" secID="quest_2_3_4_add" minLvl="5" maxLvl="10" campID="1" camp="迟来的支援" reward="T28(概念车)">
-      <Hint>敌人的坦克履带被击毁后，会暂时无法移动。这样你能更好的瞄准他们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
+      <Hint>敌方坦克的履带被击毁后，将暂时无法移动。这样你能更好的瞄准它们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
       <Primary fXP="0" cr="100000" slots="0" tokens="0" done="false">
         <req>• 击毁2辆敌方坦克的履带并在它们无法移动时造成2次伤害。</req>
       </Primary>
@@ -2947,7 +2960,7 @@
       </Secondary>
     </PM>
     <PM name="MT-4:你给我站住" short="T-55A: MT-4" desc="击毁敌方的履带，然后狠狠的打击他们。" tMID="184" opID="3" mID="4" setID="3" ID="quest_3_3_4_main" secID="quest_3_3_4_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="T-55A">
-      <Hint>敌人的坦克履带被击毁后，会暂时无法移动。这样你能更好的瞄准他们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
+      <Hint>敌方坦克的履带被击毁后，将暂时无法移动。这样你能更好的瞄准它们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
       <Primary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• 击毁3辆敌方坦克的履带并在它们无法移动时造成3次伤害。</req>
       </Primary>
@@ -3622,7 +3635,7 @@
       </Secondary>
     </PM>
     <PM name="MT-4:你给我站住" short="260工程: MT-4" desc="击毁敌方的履带，然后狠狠的打击他们。" tMID="259" opID="4" mID="4" setID="3" ID="quest_4_3_4_main" secID="quest_4_3_4_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="260工程">
-      <Hint>敌人的坦克履带被击毁后，会暂时无法移动。这样你能更好的瞄准他们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
+      <Hint>敌方坦克的履带被击毁后，将暂时无法移动。这样你能更好的瞄准它们。别忘了在命令菜单中呼叫队友一起攻击。</Hint>
       <Primary fXP="0" cr="300000" slots="0" tokens="0" done="false">
         <req>• 击毁4辆敌方坦克的履带并在它们无法移动时造成4次伤害。</req>
       </Primary>
@@ -3654,7 +3667,7 @@
         <req>• 至少击毁3辆敌方的自行火炮。</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
-        <req>• 在战斗中幸存。\n• 获得战斗胜利。\n• 自行火炮的等级必须高于你的坦克。</req>
+        <req>• 在战斗中幸存。\n• 获得战斗胜利。</req>
       </Secondary>
     </PM>
     <PM name="MT-8:交锋" short="260工程: MT-8" desc="一个优秀的中型坦克手能够充分发挥出坦克的火力和机动优势。" tMID="263" opID="4" mID="8" setID="3" ID="quest_4_3_8_main" secID="quest_4_3_8_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="260工程">
