Updated for the T26E5 Patriot tank

--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -31,6 +31,8 @@
     <tank ID="A11_T29_IGR" sName="T29" lName="T29" />
     <tank ID="A111_T25_Pilot" sName="T25 Pilot 1" lName="T25 Pilot Number 1" />
     <tank ID="A112_T71E2" sName="T71 CMCD" lName="T71 CMCD" />
+    <tank ID="A117_T26E5" sName="T26E5" lName="T26E5" />
+    <tank ID="A117_T26E5_Patriot" sName="T26E5 P" lName="T26E5 Patriot" />
     <tank ID="A12_T32" sName="T32" lName="T32" />
     <tank ID="A13_T34_hvy" sName="T34" lName="T34" />
     <tank ID="A13_T34_hvy_IGR" sName="T34" lName="T34" />
@@ -710,6 +712,7 @@
     <tank ID="R128_KV4_Kreslavskiy" sName="KV-4 Kresl." lName="KV-4 Kreslavskio" />
     <tank ID="R129_Object_257" sName="Obj. 257" lName="Objektas 257" />
     <tank ID="R13_KV-1s" sName="KV-1S" lName="KV-1S" />
+    <tank ID="R133_KV_122" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
