--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -31,6 +31,8 @@
     <tank ID="A11_T29_IGR" sName="Т29" lName="Т29" />
     <tank ID="A111_T25_Pilot" sName="T25 Pilot 1" lName="T25 Pilot Number 1" />
     <tank ID="A112_T71E2" sName="T71 CMCD" lName="T71 CMCD" />
+    <tank ID="A117_T26E5" sName="T26E5" lName="T26E5" />
+    <tank ID="A117_T26E5_Patriot" sName="T26E5 P" lName="T26E5 Patriot" />
     <tank ID="A12_T32" sName="T32" lName="T32" />
     <tank ID="A13_T34_hvy" sName="T34" lName="T34" />
     <tank ID="A13_T34_hvy_IGR" sName="T34" lName="T34" />
@@ -710,6 +712,7 @@
     <tank ID="R128_KV4_Kreslavskiy" sName="КВ-4 Кресл." lName="КВ-4 Креславского" />
     <tank ID="R129_Object_257" sName="Об. 257" lName="Объект 257" />
     <tank ID="R13_KV-1s" sName="КВ-1С" lName="КВ-1С" />
+    <tank ID="R133_KV_122" sName="КВ-122" lName="КВ-122" />
     <tank ID="R14_SU-5" sName="СУ-5" lName="СУ-5" />
     <tank ID="R15_S-51" sName="С-51" lName="С-51" />
     <tank ID="R16_SU-18" sName="СУ-18" lName="СУ-18" />
